member domain refactoring
- 계층 분화
- 관련된 코드 수정
- api 동작 확인 완료
-  정보 이동 객체(command, info 등) 수정 해야 함